src/test/resources/typeSystemTestModels/invalid/classes/ClassInnerTypeNotNamedAsEnclosing.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.classes;

public class ClassInnerTypeNotNamedAsEnclosing {

  public class ClassInnerTypeNotNamedAsEnclosing {

  }

  public interface ClassInnerTypeNotNamedAsEnclosing {

  }

}
